# vscmg-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  Readme.md  __init__.py  docker-compose.yml  main.cpp  readme.txt  setup.py
Systems/include/: RW4.h  RigidBody.h  VSCMG.h
Systems/src/: RW4.cpp  RigidBody.cpp  VSCMG.cpp
cmake/: ProjectDeps.cmake
examples/: rigid_body.cpp  vscmg.cpp
examples/cpp/: rigid_body.cpp  vscmg.cpp
examples/python/: rigid_body.py  rw4.py  vscmg.py
include/: Controllers.h  IBaseSystem.h  RigidBody.h  VSCMG.h  kinematics.h  utils.h
include/ADCS/Core/: Controllers.h  IBaseSystem.h  NumPyArrayData.h  kinematics.h  utils.h
include/ADCS/Systems/: RW4.h  RigidBody.h  VSCMG.h
python/: rigid_body.py  vscmg.py
src/: VSCMG.cpp
src/ADCS/: py_controller.cpp  pyadcs.cpp
src/ADCS/Systems/: RW4.cpp  RigidBody.cpp  VSCMG.cpp
